--- a/src/main/webapp/app/entities/work/work-detail.component.html
+++ b/src/main/webapp/app/entities/work/work-detail.component.html
@@ -16,6 +16,10 @@
         <dd>
             <span>{{work.asap}}</span>
         </dd>
+        <dt><span jhiTranslate="fixItApp.work.state">State</span></dt>
+        <dd>
+            <span jhiTranslate="{{'fixItApp.WorkState.' + work.state}}">{{work.state}}</span>
+        </dd>
         <dt><span jhiTranslate="fixItApp.work.worker">Worker</span></dt>
         <dd>
             <div *ngIf="work.worker">
